# balancin

./: .gitignore  BalancinDiagram.excalidraw  README.md  mkdocs.yml
cad/: Assembly.FCStd  BaseHolderDoNotFall.FCStd  MotorBrackets.FCStd  Nema17_MotorBracket.FCStd  Pillars.FCStd  RinHolder.FCStd  RobotBase.FCStd  RobotTop.FCStd
docs/: index.md
firmware/: CMakeLists.txt
firmware/calibration/: CMakeLists.txt  mpu6050_calibration.cpp
firmware/lib/: CMakeLists.txt
firmware/lib/MPU6050/: CMakeLists.txt  MPU6050.cpp  MPU6050_6Axis_MotionApps_V6_12.h  helper_3dmath.h
firmware/lib/motors/: CMakeLists.txt  motors.cpp  motors.h
firmware/lib/steppers/: CMakeLists.txt  steppers.cpp  steppers.h
firmware/mpu6050_DMP/: CMakeLists.txt  mpu6050_DMP_port.cpp
firmware/robot/: CMakeLists.txt
firmware/robot/include/: FreeRTOSConfig_examples_common.h  mpu6050.h
firmware/robot/lib/I2Cdev/: CMakeLists.txt
firmware/robot/lib/MPU6050/: MPU6050.h
firmware/robot/src/: main.cpp  mpu6050.cpp
gui/: pid_auto_tunning.py  pid_dump.csv  pid_tuner.py
